--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "coveragePathIgnorePatterns": ["__mocks__", "src/serviceWorker.js", "src/index.js", "src/store.js", "src/App.jsx"]
+    "coveragePathIgnorePatterns": [
+      "__mocks__",
+      "src/serviceWorker.js",
+      "src/index.js",
+      "src/store.js",
+      "src/App.jsx"
+    ]
   },
   "testMatch": [
     "<rootDir>/src/**/*.(test).{js,jsx,ts,tsx}",
