--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1"
   },
@@ -59,6 +60,7 @@
   },
   "devDependencies": {
     "enzyme-to-json": "^3.4.3",
+    "moxios": "^0.4.0",
     "sinon": "^7.5.0"
   }
 }
