--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "react-dom": "^16.11.0",
     "react-preloading-component": "0.0.5",
     "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0",
     "redux": "^4.0.4",
@@ -61,7 +60,6 @@
   },
   "devDependencies": {
     "enzyme-to-json": "^3.4.3",
-    "moxios": "^0.4.0",
-    "sinon": "^7.5.0"
+    "moxios": "^0.4.0"
   }
 }
